tests/baselines/reference/parserMethodSignature10(strict=true).errors.txt
parserMethodSignature10.ts(2,3): error TS7010: '1', which lacks return-type annotation, implicitly has an 'any' return type.


==== parserMethodSignature10.ts (1 errors) ====
    interface I {
      1?();
      ~~~~~
!!! error TS7010: '1', which lacks return-type annotation, implicitly has an 'any' return type.
    }